Name:                   iproute
Version:                0.2.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/iproute/
Synopsis:               IP Routing Table
Description:            IP Routing Table is a tree of IP ranges
                        to search one of them on the longest
                        match base. It is a kind of TRIE with one
                        way branching removed. Both IPv4 and IPv6
                        are supported.
Category:               Algorithms Network
Cabal-Version:          >= 1.6
Build-Type:             Simple
Extra-Source-Files:     test/Tests.hs test/IPv4Search.hs test/Makefile
library
  GHC-Options:          -Wall -fno-warn-unused-do-bind
  Exposed-Modules:      Data.IP
                        Data.IP.RouteTable
  Other-Modules:        Data.IP.RouteTable.Internal
  Build-Depends:        base == 4.2.*,
                        parsec >= 3, containers
Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/iproute.git

