Name:                   iproute
Version:                1.2.1
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/iproute/
Synopsis:               IP Routing Table
Description:            IP Routing Table is a tree of IP ranges
                        to search one of them on the longest
                        match base. It is a kind of TRIE with one
                        way branching removed. Both IPv4 and IPv6
                        are supported.
Category:               Algorithms Network
Cabal-Version:          >= 1.6
Build-Type:             Simple
Extra-Source-Files:     test/Tests.hs test/IPv4Search.hs test/Makefile
library
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Exposed-Modules:      Data.IP
                        Data.IP.RouteTable
  Other-Modules:        Data.IP.Addr
                        Data.IP.Mask
                        Data.IP.Op
                        Data.IP.Range
                        Data.IP.RouteTable.Internal
  Build-Depends:        base >= 4 && < 5, appar, containers
Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/iproute.git
