Name:                   iproute
Version:                1.2.9
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.mew.org/~kazu/proj/iproute/
Synopsis:               IP Routing Table
Description:            IP Routing Table is a tree of IP ranges
                        to search one of them on the longest
                        match base. It is a kind of TRIE with one
                        way branching removed. Both IPv4 and IPv6
                        are supported.
Category:               Algorithms, Network
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Data.IP
                        Data.IP.RouteTable
  Other-Modules:        Data.IP.Addr
                        Data.IP.Mask
                        Data.IP.Op
                        Data.IP.Range
                        Data.IP.RouteTable.Internal
  Build-Depends:        base >= 4 && < 5
                      , appar
                      , byteorder
                      , containers
                      , network

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       ., test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        RouteTableSpec
                      , IPSpec
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , appar
                      , byteorder
                      , containers
                      , network
                      , Safe

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/iproute.git
